[tool.poetry]
name = "tesla"
version = "0.1.0"
description = ""
authors = ["Edward Cardinal <edcgit@mindthump.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

